--- a/src/main/webapp/assets/css/styles.css
+++ b/src/main/webapp/assets/css/styles.css
@@ -2,6 +2,9 @@ body {
     background-color: seagreen;
     text-align: center;
     color: white;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
 
     /* unvisited link */
     a:link {
@@ -34,10 +37,12 @@ ul li {
 }
 
 .footer {
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 25px;
+    margin-bottom: 25px;
+    margin-top: 25px;
 }
 
 #passwordReset {
@@ -102,9 +107,18 @@ th, td {
     padding: 10px 20px;
 }
 
-label, input, select {
+input, select {
     background-color: dimgray;
     color: white;
 }
+
+img {
+    max-width: 100%;
+}
+
+#loginPic {
+    max-width: 25%;
+}
+
 
 
