Add catches to database table, add per-user catch logging, validation, and species warnings

--- a/src/main/webapp/assets/css/styles.css
+++ b/src/main/webapp/assets/css/styles.css
@@ -198,7 +198,18 @@ form input[type="submit"]:hover {
     background-color: darkslategray;
 }
 
+.error {
+    color: red;
+    font-weight: bold;
+}
 
+.success {
+    color: blue;
+    font-weight: bold;
+}
 
-
+.warning {
+    color: red;
+    font-weight: bold;
+}
 
